@@ -29,7 +29,7 @@ BUG: some gnome ubuntu themes have issues with qtstalker indicator tab resizing.
      the only workarounds are avoiding use of east/west tabs or experimenting with different themes. default gnome
      theme we know does not work. kubuntu and Qt based themes work.
 
-BUG: check all input dialogs for forbidden sql chars in text inputs
+BUG: check indicator dialog input dialogs for forbidden sql chars in text inputs
 
 
 
