@@ -22,6 +22,7 @@
 #include "CSVNewDialog.h"
 #include "Globals.h"
 #include "CSVDataBase.h"
+#include "Strip.h"
 
 #include <QtDebug>
 #include <QLineEdit>
@@ -39,8 +40,15 @@ void CSVNewDialog::done ()
 {
   QString name = _name->lineEdit()->text();
 
-  // remove any forbidden sql characters
-  name = name.remove(QString("'"), Qt::CaseSensitive);
+  Strip strip;
+  strip.verifyText(name);
+
+  if (name.isEmpty())
+  {
+    setMessage(tr("Name missing."));
+    _name->setFocus();
+    return;
+  }
 
   if (_rules.contains(name))
   {
